--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.1.11",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "next-translate": "^1.6.0",
