--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
     "next": "12.3.1",
