--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "aos": "^3.0.0-beta.6",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
     "next": "12.3.1",
