Moved from Qwick to Next

--- a/package.json
+++ b/package.json
@@ -1,57 +1,26 @@
 {
   "name": "nathanbrodin.com",
-  "description": "Nathan's portfolio, made using Qwick.js and Vite.js",
-  "engines": {
-    "node": ">=15.0.0"
-  },
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "qwik build",
-    "build.client": "vite build",
-    "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
-    "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
-    "dev": "vite --mode ssr",
-    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
-    "preview": "qwik build preview && vite preview --open",
-    "start": "vite --open --mode ssr",
-    "qwik": "qwik"
-  },
-  "devDependencies": {
-    "@builder.io/qwik": "^1.2.6",
-    "@builder.io/qwik-city": "^1.2.6",
-    "@builder.io/qwik-react": "0.5.0",
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@mui/material": "5.13.0",
-    "@mui/x-data-grid": "6.4.0",
-    "@types/eslint": "8.40.2",
-    "@types/node": "^20.4.0",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.44.0",
-    "eslint-plugin-qwik": "^1.2.6",
-    "postcss": "^8.4.23",
-    "prettier": "2.8.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.1",
-    "typescript": "5.1.6",
-    "undici": "5.22.1",
-    "vercel": "^29.1.1",
-    "vite": "4.4.0",
-    "vite-tsconfig-paths": "4.2.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@qwikest/icons": "^0.0.8",
-    "@unpic/qwik": "^0.0.23",
-    "framer-motion": "^10.12.18"
+    "@types/node": "20.4.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.12.18",
+    "next": "13.4.9",
+    "postcss": "8.4.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   }
 }
