--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
